# internal/models/category.go
@@ -3,19 +3,25 @@ package models
 import "time"
 
 type Category struct {
-	ID              int       `json:"id" json:"id"`
-	ParentID        int       `json:"parent_id" json:"parentId"`
-	Name            string    `json:"name" json:"name"`
-	Slug            string    `json:"slug" json:"slug"`
-	Description     string    `json:"description" json:"description"`
-	ImageUrl        string    `json:"image_url" json:"imageUrl"`
-	DisplayOrder    int       `json:"display_order" json:"displayOrder"`
-	IsActive        bool      `json:"is_active" json:"isActive"`
-	MetaTitle       string    `json:"meta_title" json:"metaTitle"`
-	MetaDescription string    `json:"meta_description" json:"metaDescription"`
-	MetaKeywords    string    `json:"meta_keywords" json:"metaKeywords"`
-	CreatedAt       time.Time `json:"created_at" json:"createdAt"`
-	UpdatedAt       time.Time `json:"updated_at" json:"updatedAt"`
-	Level           int       `json:"level" json:"level"`
-	Path            string    `json:"path" json:"path"`
+	ID              int       `json:"id" db:"id"`
+	ParentID        *int      `json:"parentId" db:"parent_id"`
+	Name            string    `json:"name" db:"name"`
+	Slug            string    `json:"slug" db:"slug"`
+	Description     *string   `json:"description" db:"description"`
+	ImageUrl        *string   `json:"imageUrl" db:"image_url"`
+	DisplayOrder    int       `json:"displayOrder" db:"display_order"`
+	IsActive        bool      `json:"isActive" db:"is_active"`
+	MetaTitle       *string    `json:"metaTitle" db:"meta_title"`
+	MetaDescription *string    `json:"metaDescription" db:"meta_description"`
+	MetaKeywords    *string    `json:"metaKeywords" db:"meta_keywords"`
+	CreatedAt       time.Time `json:"createdAt" db:"created_at"`
+	UpdatedAt       time.Time `json:"updatedAt" db:"updated_at"`
+	Level           int       `json:"level" db:"level"`
+	Path            *string    `json:"path" db:"path"`
+}
+
+type CategoryNode struct {
+	Category
+
+	Children []*CategoryNode `json:"children"`
 }
